feat: update version to 1.11.9.61; enhance market data handling and add Norwegian holiday service

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -262,6 +262,7 @@
     "avgPrice": "Avg Price",
     "cost": "Cost",
     "currentPrice": "Current Price",
+    "marketClosed": "Market Closed",
     "todayChange": "Today %",
     "marketValue": "Market Value",
     "gainLoss": "Gain/Loss",
