feat: migrate from CASH_ naming convention to simple CASH; update related logic and database handling

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -100,7 +100,8 @@
     "transactions": "Transactions",
     "totalValue": "Total Value",
     "totalGainLoss": "Total Gain/Loss",
-    "gainLossPercentage": "Gain/Loss %"
+    "gainLossPercentage": "Gain/Loss %",
+    "create": "Create"
   },
   "transaction": {
     "add": "Add Transaction",
