feat: Enhance UI components with improved styling and add locale-aware DateTimePicker
- Updated input fields in EditManualGavModal, EditMarketDataModal, and EditPositionModal to use a consistent background color for better visibility.
- Introduced UIDateTimePicker component for improved date and time selection across admin pages.
- Implemented locale-aware date and time formatting in useDateTime composable, utilizing browser settings for accurate representation.
- Added demo page for DateTimePicker showcasing various configurations and formats.
- Updated i18n files to include new date and time related translations.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -45,6 +45,14 @@
     "hoursAgo": "{count} hour ago | {count} hours ago",
     "daysAgo": "{count} day ago | {count} days ago"
   },
+  "dateTime": {
+    "preview": "Preview",
+    "selectDate": "Select date",
+    "selectTime": "Select time",
+    "selectDateTime": "Select date and time",
+    "invalidDate": "Invalid date",
+    "invalidTime": "Invalid time"
+  },
   "privacy": {
     "title": "Privacy Policy",
     "description": "This privacy policy describes how AlleGutta Portfolio Manager handles your personal information.",
